--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ django-allauth>=0.57,<0.62
 django-environ>=0.11,<0.12
 whitenoise>=6.6,<7
 django-tailwind>=3.8,<4
-# Or use CDN for Tailwind in base template (simpler for MVP)
+mypy
+django-stubs[compatible-mypy]
+django-stubs-ext
+django-types
